--- a/src/assets/css/pages/admin-page.css
+++ b/src/assets/css/pages/admin-page.css
@@ -1,7 +1,40 @@
 /* custom main 
  UnExpected King Tirth Shah */ 
  
- .policy-summary .summary-head {
+ main .wrapper .admin-section-container {
+  background: #fff;
+}
+main .wrapper .admin-section-container .content {
+  padding-top: 40px;
+  background: #fff;
+}
+
+.admin-section-container .dropdown-menu.filter-dropdown {
+  border: 0;
+  -webkit-box-shadow: 0 0 4px 2px rgba(148, 148, 148, 0.2);
+          box-shadow: 0 0 4px 2px rgba(148, 148, 148, 0.2);
+  border-radius: 15px;
+}
+.admin-section-container .accordion-header {
+  margin-bottom: 0;
+  position: relative;
+}
+.admin-section-container .search-over-accordion {
+  position: absolute;
+  right: 20px;
+  top: 5px;
+  z-index: 100;
+}
+.admin-section-container .remarket-tab div#v-pills-tab .nav-link {
+  text-align: left;
+  font-size: 12px;
+  height: 44px;
+  border-radius: 0;
+}
+.admin-section-container .remarket-tab div#v-pills-tab .nav-link.active {
+  border-radius: 4px;
+}
+.admin-section-container .policy-summary .summary-head {
   margin-bottom: 24px;
   font-family: Roboto Serif;
   font-size: 32px;
@@ -10,28 +43,27 @@
   letter-spacing: 0em;
   text-align: left;
 }
-.policy-summary .summary-content {
+.admin-section-container .policy-summary .summary-content {
   background: #f2f7fc;
   padding: 16px;
   border-radius: 8px;
   margin-bottom: 24px;
 }
-.policy-summary .summary-content table {
+.admin-section-container .policy-summary .summary-content table {
   width: 100%;
 }
-.policy-summary .summary-content table td {
+.admin-section-container .policy-summary .summary-content table td {
   width: 25%;
   padding-bottom: 12px;
   font-size: 16px;
 }
-.policy-summary .summary-content table td .title {
+.admin-section-container .policy-summary .summary-content table td .title {
   font-size: 18px;
 }
-.policy-summary .summary-content table tbody tr:last-child td {
+.admin-section-container .policy-summary .summary-content table tbody tr:last-child td {
   padding-bottom: 0;
 }
-
-.admin-summary-data .tab-title {
+.admin-section-container .admin-summary-data .tab-title {
   font-size: 30px;
   font-weight: 500;
   line-height: 45px;
@@ -39,42 +71,42 @@
   text-align: left;
   margin-bottom: 16px;
 }
-.admin-summary-data .summary-detail-section {
+.admin-section-container .admin-summary-data .summary-detail-section {
   background: #f2f7fc;
   border-radius: 8px;
   margin-bottom: 16px;
 }
-.admin-summary-data .summary-detail-section.editable .summary-card .card-body label span {
+.admin-section-container .admin-summary-data .summary-detail-section.editable .summary-card .card-body label span {
   display: none;
 }
-.admin-summary-data .summary-detail-section.editable .summary-card .card-body label input {
+.admin-section-container .admin-summary-data .summary-detail-section.editable .summary-card .card-body label input {
   display: block;
 }
-.admin-summary-data .summary-detail-section.editable .summary-card .card-body label .input-sub-title {
+.admin-section-container .admin-summary-data .summary-detail-section.editable .summary-card .card-body label .input-sub-title {
   display: inline-block;
 }
-.admin-summary-data .summary-detail-section.editable .summary-card .card-body label + .select-group {
+.admin-section-container .admin-summary-data .summary-detail-section.editable .summary-card .card-body label + .select-group {
   display: block;
 }
-.admin-summary-data .summary-detail-section.editable .summary-card .card-body > .row > * {
+.admin-section-container .admin-summary-data .summary-detail-section.editable .summary-card .card-body > .row > * {
   width: 33.33%;
 }
-.admin-summary-data .summary-detail-section.editable .summary-card.mortgagee-card .card-body > .row > * {
+.admin-section-container .admin-summary-data .summary-detail-section.editable .summary-card.mortgagee-card .card-body > .row > * {
   width: 50%;
 }
-.admin-summary-data .summary-detail-section .summary-card {
+.admin-section-container .admin-summary-data .summary-detail-section .summary-card {
   padding: 16px;
   border-bottom: 1px solid #b3d3ec;
 }
-.admin-summary-data .summary-detail-section .summary-card:last-child {
+.admin-section-container .admin-summary-data .summary-detail-section .summary-card:last-child {
   border-bottom: 0;
 }
-.admin-summary-data .summary-detail-section .card-header,
-.admin-summary-data .summary-detail-section .card-title,
-.admin-summary-data .summary-detail-section .card-body {
+.admin-section-container .admin-summary-data .summary-detail-section .card-header,
+.admin-section-container .admin-summary-data .summary-detail-section .card-title,
+.admin-section-container .admin-summary-data .summary-detail-section .card-body {
   all: revert;
 }
-.admin-summary-data .summary-detail-section .card-header {
+.admin-section-container .admin-summary-data .summary-detail-section .card-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,7 +115,7 @@
           justify-content: space-between;
   margin-bottom: 16px;
 }
-.admin-summary-data .summary-detail-section .card-header .card-title {
+.admin-section-container .admin-summary-data .summary-detail-section .card-header .card-title {
   all: revert;
   font-size: 18px;
   font-weight: 500;
@@ -91,27 +123,27 @@
   letter-spacing: 0em;
   text-align: left;
 }
-.admin-summary-data .summary-detail-section .card-body table th,
-.admin-summary-data .summary-detail-section .card-body table td {
+.admin-section-container .admin-summary-data .summary-detail-section .card-body table th,
+.admin-section-container .admin-summary-data .summary-detail-section .card-body table td {
   padding: 0;
 }
-.admin-summary-data .summary-detail-section .card-body label {
+.admin-section-container .admin-summary-data .summary-detail-section .card-body label {
   margin-bottom: 0;
 }
-.admin-summary-data .summary-detail-section .card-body label span {
+.admin-section-container .admin-summary-data .summary-detail-section .card-body label span {
   display: block;
 }
-.admin-summary-data .summary-detail-section .card-body label .input-value {
+.admin-section-container .admin-summary-data .summary-detail-section .card-body label .input-value {
   font-weight: 400;
 }
-.admin-summary-data .summary-detail-section .card-body label input {
+.admin-section-container .admin-summary-data .summary-detail-section .card-body label input {
   display: none;
 }
-.admin-summary-data .summary-detail-section .card-body label + .select-group,
-.admin-summary-data .summary-detail-section .card-body label .input-sub-title {
+.admin-section-container .admin-summary-data .summary-detail-section .card-body label + .select-group,
+.admin-section-container .admin-summary-data .summary-detail-section .card-body label .input-sub-title {
   display: none;
 }
-.admin-summary-data .summary-detail-section .card-body label .input-sub-title {
+.admin-section-container .admin-summary-data .summary-detail-section .card-body label .input-sub-title {
   padding: 4px 12px 0;
   font-size: 14px;
   font-weight: 400;
@@ -119,26 +151,26 @@
   text-align: left;
   color: #616161;
 }
-.admin-summary-data .summary-detail-section .location-card .card-body table th,
-.admin-summary-data .summary-detail-section .location-card .card-body table td {
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table th,
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table td {
   padding-right: 15px;
   padding-bottom: 12px;
 }
-.admin-summary-data .summary-detail-section .location-card .card-body table th.address-field,
-.admin-summary-data .summary-detail-section .location-card .card-body table td.address-field {
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table th.address-field,
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table td.address-field {
   width: 40%;
 }
-.admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(1),
-.admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(2),
-.admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(1),
-.admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(2) {
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(1),
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(2),
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(1),
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(2) {
   width: 60px;
   padding-right: 10px;
 }
-.admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(1) input,
-.admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(2) input,
-.admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(1) input,
-.admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(2) input {
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(1) input,
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table th:nth-child(2) input,
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(1) input,
+.admin-section-container .admin-summary-data .summary-detail-section .location-card .card-body table td:nth-child(2) input {
   padding: 0 5px;
   text-align: center;
 }
