--- a/src/scss/pages/admin-page.scss
+++ b/src/scss/pages/admin-page.scss
@@ -1,172 +1,210 @@
-.policy-summary {
-  .summary-head {
-    margin-bottom: 24px;
-    font-family: Roboto Serif;
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 54px;
-    letter-spacing: 0em;
-    text-align: left;
-  }
-
-  .summary-content {
-    background: #f2f7fc;
-    padding: 16px;
-    border-radius: 8px;
-    margin-bottom: 24px;
-
-    table {
-      width: 100%;
-
-      td {
-        width: 25%;
-        padding-bottom: 12px;
-        font-size: 16px;
-
-        .title {
-          font-size: 18px;
-        }
-      }
-
-      tbody {
-        tr:last-child td {
-          padding-bottom: 0;
-        }
-      }
-    }
+main .wrapper .admin-section-container {
+  background: #fff;
+  .content {
+    padding-top: 40px;
+    background: #fff;
   }
 }
 
-.admin-summary-data {
-  .tab-title {
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 45px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-bottom: 16px;
+.admin-section-container {
+  .dropdown-menu.filter-dropdown {
+    border: 0;
+    box-shadow: 0 0 4px 2px #94949433;
+    border-radius: 15px;
   }
 
-  .summary-detail-section {
-    background: #f2f7fc;
-    border-radius: 8px;
-    margin-bottom: 16px;
+  .accordion-header {
+    margin-bottom: 0;
+    position: relative;
+  }
 
-    &.editable .summary-card {
-      .card-body label {
-        span {
-          display: none;
-        }
-        input {
-          display: block;
-        }
+  .search-over-accordion {
+    position: absolute;
+    right: 20px;
+    top: 5px;
+    z-index: 100;
+  }
 
-        .input-sub-title {
-          display: inline-block;
-        }
+  .remarket-tab div#v-pills-tab .nav-link {
+    text-align: left;
+    font-size: 12px;
+    height: 44px;
+    border-radius: 0;
 
-        & + .select-group {
-          display: block;
-        }
-      }
+    &.active{
+      border-radius: 4px;
+    }
+  }
 
-      .card-body > .row > * {
-        width: 33.33%;
-      }
-
-      &.mortgagee-card .card-body > .row > * {
-        width: 50%;
-      }
+  .policy-summary {
+    .summary-head {
+      margin-bottom: 24px;
+      font-family: Roboto Serif;
+      font-size: 32px;
+      font-weight: 400;
+      line-height: 54px;
+      letter-spacing: 0em;
+      text-align: left;
     }
 
-    .summary-card {
+    .summary-content {
+      background: #f2f7fc;
       padding: 16px;
-      border-bottom: 1px solid #b3d3ec;
+      border-radius: 8px;
+      margin-bottom: 24px;
 
-      &:last-child {
-        border-bottom: 0;
+      table {
+        width: 100%;
+
+        td {
+          width: 25%;
+          padding-bottom: 12px;
+          font-size: 16px;
+
+          .title {
+            font-size: 18px;
+          }
+        }
+
+        tbody {
+          tr:last-child td {
+            padding-bottom: 0;
+          }
+        }
       }
     }
+  }
 
-    .card-header,
-    .card-title,
-    .card-body {
-      all: revert;
+  .admin-summary-data {
+    .tab-title {
+      font-size: 30px;
+      font-weight: 500;
+      line-height: 45px;
+      letter-spacing: 0em;
+      text-align: left;
+      margin-bottom: 16px;
     }
 
-    .card-header {
-      display: flex;
-      justify-content: space-between;
+    .summary-detail-section {
+      background: #f2f7fc;
+      border-radius: 8px;
       margin-bottom: 16px;
 
-      .card-title {
-        all: revert;
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 28px;
-        letter-spacing: 0em;
-        text-align: left;
-      }
-    }
-
-    .card-body {
-      table {
-        th,
-        td {
-          padding: 0;
-        }
-      }
-      label {
-        margin-bottom: 0;
-        span {
-          display: block;
-        }
-        .input-value {
-          font-weight: 400;
-        }
-
-        input {
-          display: none;
-        }
-
-        & + .select-group,
-        .input-sub-title {
-          display: none;
-        }
-        .input-sub-title {
-          padding: 4px 12px 0;
-          font-size: 14px;
-          font-weight: 400;
-          line-height: 22px;
-          text-align: left;
-          color: #616161;
-        }
-      }
-    }
-
-    .location-card {
-      .card-body {
-        table {
-
-          th,
-          td {
-            &.address-field {
-              width: 40%;
-            }
-            padding-right: 15px;
-            padding-bottom: 12px;
+      &.editable .summary-card {
+        .card-body label {
+          span {
+            display: none;
+          }
+          input {
+            display: block;
           }
 
-          th:nth-child(1),
-          th:nth-child(2),
-          td:nth-child(1),
-          td:nth-child(2) {
-            width: 60px;
-            padding-right: 10px;
+          .input-sub-title {
+            display: inline-block;
+          }
 
-            input {
-              padding: 0 5px;
-              text-align: center;
+          & + .select-group {
+            display: block;
+          }
+        }
+
+        .card-body > .row > * {
+          width: 33.33%;
+        }
+
+        &.mortgagee-card .card-body > .row > * {
+          width: 50%;
+        }
+      }
+
+      .summary-card {
+        padding: 16px;
+        border-bottom: 1px solid #b3d3ec;
+
+        &:last-child {
+          border-bottom: 0;
+        }
+      }
+
+      .card-header,
+      .card-title,
+      .card-body {
+        all: revert;
+      }
+
+      .card-header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 16px;
+
+        .card-title {
+          all: revert;
+          font-size: 18px;
+          font-weight: 500;
+          line-height: 28px;
+          letter-spacing: 0em;
+          text-align: left;
+        }
+      }
+
+      .card-body {
+        table {
+          th,
+          td {
+            padding: 0;
+          }
+        }
+        label {
+          margin-bottom: 0;
+          span {
+            display: block;
+          }
+          .input-value {
+            font-weight: 400;
+          }
+
+          input {
+            display: none;
+          }
+
+          & + .select-group,
+          .input-sub-title {
+            display: none;
+          }
+          .input-sub-title {
+            padding: 4px 12px 0;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 22px;
+            text-align: left;
+            color: #616161;
+          }
+        }
+      }
+
+      .location-card {
+        .card-body {
+          table {
+            th,
+            td {
+              &.address-field {
+                width: 40%;
+              }
+              padding-right: 15px;
+              padding-bottom: 12px;
+            }
+
+            th:nth-child(1),
+            th:nth-child(2),
+            td:nth-child(1),
+            td:nth-child(2) {
+              width: 60px;
+              padding-right: 10px;
+
+              input {
+                padding: 0 5px;
+                text-align: center;
+              }
             }
           }
         }
