--- a/src/scss/pages/insurance-type.scss
+++ b/src/scss/pages/insurance-type.scss
@@ -22,7 +22,12 @@
     padding: 15px;
     // overflow: hidden;
 }
-
+.yes-box {
+    margin: 0 auto;
+    @media only screen and (min-width: 600px) {
+        width: 276px;
+    }
+}
 .white-box {
     background: var(--color-white);
     border: 1px solid var(--color-border-light);
